@@ -1,6 +1,8 @@
 quelea (2016.2) stable; urgency=normal
  
   * Add support for displaying PDF
-  * 
+  * Add planning centre online import
+  * Aspect ratio fix
+  * Fix for the projector not opening with the correct size on Linux
 
  -- Michael Berry <michael@quelea.org>  Sunday, 26 May 2016 00:00:00 +0000
